[project]
name = "document-comparison-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "docx2python>=2.0.0",
    "python-docx>=1.1.0",
    "diff-match-patch>=20200713",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processors", "report_generator"]
