[project]
name = "usluga-do-porownan"
version = "1.0.0"
description = "Usługa API do porównywania dokumentów DOCX"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "python-docx>=1.0.0",
    "docx2python>=2.0.0",
    "diff-match-patch>=20230430",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
